[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odysseia-forum"
version = "0.1.0"
description = "Discord论坛搜索机器人"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.8.0",
    "Pillow>=9.0.0",
    "aiosqlite>=0.19.0",
    "sqlmodel==0.0.19",
    "orjson"
]

[tool.setuptools.packages.find]
where = ["src"]